# integralImage

./: .gitignore  CMakeLists.txt  integralImage_par.cu  integralImage_par_efficient.cpp  integralImage_par_efficient.cu  integralImage_seq.cpp  main.cu  scan.cu  scan.exp  scan.lib
